<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/hit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stay_button"
        android:layout_alignBottom="@+id/stay_button"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/stay_button"
        android:text="@string/hit_button" />

    <Button
        android:id="@+id/fold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stay_button"
        android:layout_alignBottom="@+id/stay_button"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/stay_button"
        android:text="@string/fold_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stay_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/players_hand_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerTotalMonies_Label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/dealers_hand_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/playerTotalMonies_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stay_button"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="17dp"
        android:text="@string/player_cash"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/stay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/stay_button" />

    <TextView
        android:id="@+id/playerBet_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/hit_button"
        android:layout_marginTop="14dp"
        android:text="@string/player_bet_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
