<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/to_simulator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerBet_Label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/to_simulator_button" />

    <TextView
        android:id="@+id/playerBet_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/screen_selection_layout"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/to_blackjack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerBet_Label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/to_blackjack_button" />

</RelativeLayout>